@@ -20,7 +20,7 @@
   <properties>
     <java.version>17</java.version>
     <jjwt.version>0.12.5</jjwt.version>
-    <lombok.version>1.18.36</lombok.version>
+    <lombok.version>1.18.44</lombok.version>
   </properties>
 
   <dependencies>
@@ -160,6 +160,14 @@
               <artifactId>lombok</artifactId>
             </exclude>
           </excludes>
+        </configuration>
+      </plugin>
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-surefire-plugin</artifactId>
+        <version>3.2.5</version>
+        <configuration>
+          <argLine>-Dnet.bytebuddy.experimental=true</argLine>
         </configuration>
       </plugin>
     </plugins>
